syntax = "proto3";

package mgmt.v1alpha1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "mgmt/v1alpha1/transformer.proto";

message GetJobsRequest {
  string account_id = 1 [(buf.validate.field).string.uuid = true];
}
message GetJobsResponse {
  repeated Job jobs = 1;
}

message JobSource {
  JobSourceOptions options = 1 [(buf.validate.field).required = true];
}

message JobSourceOptions {
  oneof config {
    option (buf.validate.oneof).required = true;
    PostgresSourceConnectionOptions postgres = 1;
    AwsS3SourceConnectionOptions aws_s3 = 2;
    MysqlSourceConnectionOptions mysql = 3;
    GenerateSourceOptions generate = 4;
  }
}

message CreateJobDestination {
  string connection_id = 1;
  JobDestinationOptions options = 2;
}

message JobDestination {
  string connection_id = 1;
  JobDestinationOptions options = 2;
  string id = 3;
}

message GenerateSourceOptions {
  repeated GenerateSourceSchemaOption schemas = 1 [(buf.validate.field).repeated.min_items = 1];
  optional string fk_source_connection_id = 3 [(buf.validate.field).string.uuid = true];
}
message GenerateSourceSchemaOption {
  string schema = 1 [(buf.validate.field).string.min_len = 1];
  repeated GenerateSourceTableOption tables = 2 [(buf.validate.field).repeated.min_items = 1];
}
message GenerateSourceTableOption {
  string table = 1 [(buf.validate.field).string.min_len = 1];
  int64 row_count = 2 [(buf.validate.field).int64.gte = 1];
}

message PostgresSourceConnectionOptions {
  bool halt_on_new_column_addition = 1;
  repeated PostgresSourceSchemaOption schemas = 2;
  string connection_id = 3 [(buf.validate.field).string.uuid = true];
}

message PostgresSourceSchemaOption {
  string schema = 1;
  repeated PostgresSourceTableOption tables = 2;
}
message PostgresSourceTableOption {
  string table = 1;
  optional string where_clause = 2;
}

message MysqlSourceConnectionOptions {
  bool halt_on_new_column_addition = 1;
  repeated MysqlSourceSchemaOption schemas = 2;
  string connection_id = 3 [(buf.validate.field).string.uuid = true];
}

message MysqlSourceSchemaOption {
  string schema = 1;
  repeated MysqlSourceTableOption tables = 2;
}
message MysqlSourceTableOption {
  string table = 1;
  optional string where_clause = 2;
}

message AwsS3SourceConnectionOptions {
  string connection_id = 1 [(buf.validate.field).string.uuid = true];
}

message JobDestinationOptions {
  oneof config {
    option (buf.validate.oneof).required = true;
    PostgresDestinationConnectionOptions postgres_options = 1;
    AwsS3DestinationConnectionOptions aws_s3_options = 2;
    MysqlDestinationConnectionOptions mysql_options = 3;
  }
}

message PostgresDestinationConnectionOptions {
  PostgresTruncateTableConfig truncate_table = 1;
  bool init_table_schema = 2;
}

message PostgresTruncateTableConfig {
  bool truncate_before_insert = 1;
  bool cascade = 2;
}

message MysqlDestinationConnectionOptions {
  MysqlTruncateTableConfig truncate_table = 1;
  bool init_table_schema = 2;
}
message MysqlTruncateTableConfig {
  bool truncate_before_insert = 1;
}

message AwsS3DestinationConnectionOptions {}

message CreateJobRequest {
  string account_id = 1 [(buf.validate.field).string.uuid = true];
  string job_name = 2 [(buf.validate.field).string.min_len = 1];
  optional string cron_schedule = 3;
  repeated JobMapping mappings = 4;
  JobSource source = 5;
  repeated CreateJobDestination destinations = 6;
  bool initiate_job_run = 7;
}
message CreateJobResponse {
  Job job = 1;
}

message JobMappingTransformer {
  string source = 1;
  TransformerConfig config = 3;
}

message JobMapping {
  string schema = 1;
  string table = 2;
  string column = 3;
  JobMappingTransformer transformer = 5;
}

enum JobStatus {
  JOB_STATUS_UNSPECIFIED = 0;
  JOB_STATUS_ENABLED = 1;
  JOB_STATUS_PAUSED = 3;
  JOB_STATUS_DISABLED = 4;
}

message GetJobRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}
message GetJobResponse {
  Job job = 1;
}

message UpdateJobScheduleRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  optional string cron_schedule = 2;
}
message UpdateJobScheduleResponse {
  Job job = 1;
}

message PauseJobRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  bool pause = 2;
  optional string note = 3;
}
message PauseJobResponse {
  Job job = 1;
}

message UpdateJobSourceConnectionRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  JobSource source = 2;
  repeated JobMapping mappings = 3 [(buf.validate.field).repeated = {min_items: 1}];
}
message UpdateJobSourceConnectionResponse {
  Job job = 1;
}

message PostgresSourceSchemaSubset {
  repeated PostgresSourceSchemaOption postgres_schemas = 1;
}

message MysqlSourceSchemaSubset {
  repeated MysqlSourceSchemaOption mysql_schemas = 1;
}

message JobSourceSqlSubetSchemas {
  oneof schemas {
    option (buf.validate.oneof).required = true;
    PostgresSourceSchemaSubset postgres_subset = 2;
    MysqlSourceSchemaSubset mysql_subset = 3;
  }
}

message SetJobSourceSqlConnectionSubsetsRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  JobSourceSqlSubetSchemas schemas = 2;
}
message SetJobSourceSqlConnectionSubsetsResponse {
  Job job = 1;
}

message UpdateJobDestinationConnectionRequest {
  string job_id = 1 [(buf.validate.field).string.uuid = true];
  string connection_id = 2 [(buf.validate.field).string.uuid = true];
  JobDestinationOptions options = 3;
  string destination_id = 4;
}
message UpdateJobDestinationConnectionResponse {
  Job job = 1;
}

message DeleteJobDestinationConnectionRequest {
  string destination_id = 1 [(buf.validate.field).string.uuid = true];
}
message DeleteJobDestinationConnectionResponse {}

message CreateJobDestinationConnectionsRequest {
  string job_id = 1;
  repeated CreateJobDestination destinations = 2;
}
message CreateJobDestinationConnectionsResponse {
  Job job = 1;
}

message DeleteJobRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}
message DeleteJobResponse {}

message IsJobNameAvailableRequest {
  string name = 1;
  string account_id = 2 [(buf.validate.field).string.uuid = true];
}
message IsJobNameAvailableResponse {
  bool is_available = 1;
}

message GetJobRunsRequest {
  oneof id {
    string job_id = 1 [(buf.validate.field).string.uuid = true];
    string account_id = 2 [(buf.validate.field).string.uuid = true];
  }
}
message GetJobRunsResponse {
  repeated JobRun job_runs = 1;
}

message GetJobRunRequest {
  string job_run_id = 1;
  string account_id = 2 [(buf.validate.field).string.uuid = true];
}
message GetJobRunResponse {
  JobRun job_run = 1;
}

message CreateJobRunRequest {
  string job_id = 1;
}
message CreateJobRunResponse {}

message CancelJobRunRequest {
  string job_run_id = 1;
  string account_id = 2 [(buf.validate.field).string.uuid = true];
}
message CancelJobRunResponse {}

message Job {
  string id = 1;

  string created_by_user_id = 2;
  google.protobuf.Timestamp created_at = 3;

  string updated_by_user_id = 4;
  google.protobuf.Timestamp updated_at = 5;

  string name = 6;

  JobSource source = 7;
  repeated JobDestination destinations = 8;
  repeated JobMapping mappings = 9;
  optional string cron_schedule = 10;

  string account_id = 11;
}

message JobRecentRun {
  google.protobuf.Timestamp start_time = 1;

  string job_run_id = 2;
}

message GetJobRecentRunsRequest {
  string job_id = 1;
}
message GetJobRecentRunsResponse {
  repeated JobRecentRun recent_runs = 1;
}

message JobNextRuns {
  repeated google.protobuf.Timestamp next_run_times = 1;
}

message GetJobNextRunsRequest {
  string job_id = 1;
}
message GetJobNextRunsResponse {
  JobNextRuns next_runs = 1;
}

message GetJobStatusRequest {
  string job_id = 1;
}
message GetJobStatusResponse {
  JobStatus status = 1;
}

message JobStatusRecord {
  string job_id = 1;
  JobStatus status = 2;
}

message GetJobStatusesRequest {
  string account_id = 1 [(buf.validate.field).string.uuid = true];
}
message GetJobStatusesResponse {
  repeated JobStatusRecord statuses = 1;
}

enum ActivityStatus {
  ACTIVITY_STATUS_UNSPECIFIED = 0;
  ACTIVITY_STATUS_SCHEDULED = 1;
  ACTIVITY_STATUS_STARTED = 2;
  ACTIVITY_STATUS_CANCELED = 3;
  ACTIVITY_STATUS_FAILED = 4;
}

message ActivityFailure {
  string message = 1;
}

message PendingActivity {
  ActivityStatus status = 1;
  string activity_name = 2;
  optional ActivityFailure last_failure = 3;
}

message JobRun {
  // The id of the job run. This will currently be equivalent to the temporal workflow id
  string id = 1;
  string job_id = 2;
  string name = 3;
  JobRunStatus status = 4;

  google.protobuf.Timestamp started_at = 6;
  optional google.protobuf.Timestamp completed_at = 7;
  // Pending activities are only returned when retrieving a specific job run and will not be returned when requesting job runs in list format
  repeated PendingActivity pending_activities = 8;
}

enum JobRunStatus {
  JOB_RUN_STATUS_UNSPECIFIED = 0;
  JOB_RUN_STATUS_PENDING = 1;
  JOB_RUN_STATUS_RUNNING = 2;
  JOB_RUN_STATUS_COMPLETE = 3;
  JOB_RUN_STATUS_ERROR = 4;
  JOB_RUN_STATUS_CANCELED = 5;
  JOB_RUN_STATUS_TERMINATED = 6;
  JOB_RUN_STATUS_FAILED = 7;
}

message JobRunEventTaskError {
  string message = 1;
  string retry_state = 2;
}

message JobRunEventTask {
  int64 id = 1;
  string type = 2;
  google.protobuf.Timestamp event_time = 3;
  JobRunEventTaskError error = 4;
}

message JobRunSyncMetadata {
  string schema = 1;
  string table = 2;
}

message JobRunEventMetadata {
  oneof metadata {
    option (buf.validate.oneof).required = true;
    JobRunSyncMetadata sync_metadata = 1;
  }
}

message JobRunEvent {
  int64 id = 1;
  string type = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp close_time = 4;
  JobRunEventMetadata metadata = 5;
  repeated JobRunEventTask tasks = 6;
}

message GetJobRunEventsRequest {
  string job_run_id = 1;
  string account_id = 2 [(buf.validate.field).string.uuid = true];
}

message GetJobRunEventsResponse {
  repeated JobRunEvent events = 1;
  bool is_run_complete = 2;
}

message DeleteJobRunRequest {
  string job_run_id = 1;
  string account_id = 2 [(buf.validate.field).string.uuid = true];
}
message DeleteJobRunResponse {}

message TerminateJobRunRequest {
  string job_run_id = 1;
  string account_id = 2 [(buf.validate.field).string.uuid = true];
}
message TerminateJobRunResponse {}

enum LogWindow {
  LOG_WINDOW_NO_TIME_UNSPECIFIED = 0;
  LOG_WINDOW_FIFTEEN_MIN = 1;
  LOG_WINDOW_ONE_HOUR = 2;
  LOG_WINDOW_ONE_DAY = 3;
}
message GetJobRunLogsStreamRequest {
  string job_run_id = 1;
  string account_id = 2 [(buf.validate.field).string.uuid = true];
  LogWindow window = 3;
  bool should_tail = 4;
  optional int64 max_log_lines = 5 [(buf.validate.field).int64.gte = 1];
}
message GetJobRunLogsStreamResponse {
  string log_line = 1;
}

service JobService {
  rpc GetJobs(GetJobsRequest) returns (GetJobsResponse) {}
  rpc GetJob(GetJobRequest) returns (GetJobResponse) {}
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse) {}
  rpc DeleteJob(DeleteJobRequest) returns (DeleteJobResponse) {}
  rpc IsJobNameAvailable(IsJobNameAvailableRequest) returns (IsJobNameAvailableResponse) {}
  rpc UpdateJobSchedule(UpdateJobScheduleRequest) returns (UpdateJobScheduleResponse) {}
  rpc UpdateJobSourceConnection(UpdateJobSourceConnectionRequest) returns (UpdateJobSourceConnectionResponse) {}
  rpc SetJobSourceSqlConnectionSubsets(SetJobSourceSqlConnectionSubsetsRequest) returns (SetJobSourceSqlConnectionSubsetsResponse) {}
  rpc UpdateJobDestinationConnection(UpdateJobDestinationConnectionRequest) returns (UpdateJobDestinationConnectionResponse) {}
  rpc DeleteJobDestinationConnection(DeleteJobDestinationConnectionRequest) returns (DeleteJobDestinationConnectionResponse) {}
  rpc CreateJobDestinationConnections(CreateJobDestinationConnectionsRequest) returns (CreateJobDestinationConnectionsResponse) {}
  rpc PauseJob(PauseJobRequest) returns (PauseJobResponse) {}
  // Returns a list of recently invoked job runs baseds on the Temporal cron scheduler. This will return a list of job runs that include archived runs
  rpc GetJobRecentRuns(GetJobRecentRunsRequest) returns (GetJobRecentRunsResponse) {}
  // Returns a list of runs that are scheduled for execution based on the Temporal cron scheduler.
  rpc GetJobNextRuns(GetJobNextRunsRequest) returns (GetJobNextRunsResponse) {}
  rpc GetJobStatus(GetJobStatusRequest) returns (GetJobStatusResponse) {}
  rpc GetJobStatuses(GetJobStatusesRequest) returns (GetJobStatusesResponse) {}

  // Returns a list of job runs by either account or job
  rpc GetJobRuns(GetJobRunsRequest) returns (GetJobRunsResponse) {}
  rpc GetJobRunEvents(GetJobRunEventsRequest) returns (GetJobRunEventsResponse) {}
  // Returns a specific job run, along with any of its pending activities
  rpc GetJobRun(GetJobRunRequest) returns (GetJobRunResponse) {}
  rpc DeleteJobRun(DeleteJobRunRequest) returns (DeleteJobRunResponse) {}
  rpc CreateJobRun(CreateJobRunRequest) returns (CreateJobRunResponse) {}
  rpc CancelJobRun(CancelJobRunRequest) returns (CancelJobRunResponse) {}
  rpc TerminateJobRun(TerminateJobRunRequest) returns (TerminateJobRunResponse) {}
  // Returns a stream of logs from the worker nodes that pertain to a specific job run
  rpc GetJobRunLogsStream(GetJobRunLogsStreamRequest) returns (stream GetJobRunLogsStreamResponse) {}
}
