syntax = "proto3";

package mgmt.v1alpha1;

// import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

// add these other fields back in once we add in custom transformers

message GetTransformersRequest {
  //   string account_id = 1 [(validate.rules).string.uuid = true];
}

message GetTransformersResponse {
  repeated Transformer transformers = 1;
}

message Transformer {
  //   string id = 1 [(validate.rules).string.uuid = true];
  string title = 2;
  string value = 3;
  string description = 4;

  //   string created_by_user_id = 4;
  //   google.protobuf.Timestamp created_at = 5;

  //   string updated_by_user_id = 6;
  //   google.protobuf.Timestamp updated_at = 7;

  TransformerConfig config = 5;

  //   string account_id = 9;
}

message TransformerConfig {
  oneof config {
    option (validate.required) = true;

    EmailConfig email_config = 1;
  }
}

message EmailConfig {
  bool preserve_domain = 1;
  bool preserve_length = 2;
}

service TransformersService {
  rpc GetTransformers(GetTransformersRequest) returns (GetTransformersResponse) {}
}
